# kata-functional-fun-python

./: .gitignore  README.md  pyproject.toml
kata_base_python/: kata.py
kata_function_fun/: reading.py  reading_processor.py
tests/: test_kata.py  test_reading_processor.py
