[tool.poetry]
name = "kata-base-python"
version = "0.1.0"
description = ""
authors = ["shawn <shawnbutton@gmail.com>"]
readme = "README.md"

[tool.poetry.dependencies]
python = "^3.12"
toolz = "^0.12.1"


[tool.poetry.group.dev.dependencies]
pytest = "^8.0.0"

[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"
